# computational-linguistics

./: .gitignore  pyproject.toml
docs/: part_of_speech_tagging.ipynb  string_matching.ipynb  vector_space_models.ipynb
src/: string_matching.py
src/quiz/: quiz0.ipynb  quiz0.py  quiz1.py  quiz2.py  quiz3.py  quiz3_base.py
