[tool.poetry]
name = "computational-linguistics"
version = "0.1.0"
description = ""
authors = ["darinkishore <darinkishore@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
elit-tokenizer = "^1.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
